[project]
name = "berkowitz"
version = "0.1.0"
description = "Pure Python implementation of Samuelson–Berkowitz algorithm for computing characteristic polynomial of an (n×n) matrix"
readme = "README.md"
license = "MIT"
keywords = ["samuelson-berkowitz", "characteristic polynomial", "matrix"]
authors = [{ name = "Vladimir Poghosyan", email = "vlad.jit@gmail.com" }]
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
    "pytest",
    "sympy",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
